# tables

./: .gitignore  .pre-commit-config.yaml  404.html  AUTHORS  CHANGELOG  Pipfile  README.md  index.html  mkdocs.yaml  setup.cfg  setup.py  tables_runner
docs/: index.md  installation.md  usage.md
installation/: index.html
search/: search_index.json
src/tables/: __init__.py  __main__.py  _version.py  cli.py
src/tables/ucd/: categories.py  east_asian_width.py  utils.py
src/tables/ucd/eaw/: __init__.py  command.py
src/tests/: test_tables.py
tests/: test_tables.py
usage/: index.html
