[metadata]
name = tables
author = Abdessattar Sassi
author_email = 457645+abdes@users.noreply.github.com
summary = Unicode data tables generator for unic++
description_file = README.md
description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/unicpp/tables
project_urls =
    Bug Tracker = https://github.com/unicpp/tables/issues
    Documentation = https://unicpp.github.io/tables/
    Source Code = https://github.com/unicpp/tables
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    unicode

[options]
packages = find:
package_dir =
    =src

[entry_points]
console_scripts =
    tables = tables.cli:cli
